[gd_scene load_steps=6 format=3 uid="uid://bdgbisoqytr88"]

[ext_resource type="Script" uid="uid://b6kps8jutckkn" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://dp5kbnxisb357" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cvrb672lkhhfv" path="res://mob.tscn" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://da1auq8jni7ht" path="res://art/grass.png" id="3_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_1bvp3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 480.0
offset_bottom = 720.0
texture = ExtResource("3_1bvp3")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ig7tw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
